Fist klenly commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <![endif]-->
 	<!-- GOOGLE FONT -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+	<meta name="viewport" content="initial-scale=1">
 </head>
 <body>
 	<div class="bodyWrapper">
@@ -68,7 +69,7 @@
 				<div class="smlLogo"></div>
 				<p class="footer">All rights reserved &copy; 2014 klenly, Inc.</p>
 			</div>
-			<ul class="right contextMenu">
+			<ul class="contextMenu">
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact</a></li>
 				<li><a href="#">Service Providers</a></li>
