Updated fonts root again

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 	<section class="footer">
 		<footer>
 			<ul class="left social">
-				<li><a href="#"><img src="../fonts/icomoon/SVG/facebook.svg" alt="Visit our Facebook Page" title="Visit our Facebook Page" class="facebook"></a></li>
-				<li><a href="#"><img src="../fonts/icomoon/SVG/twitter.svg" alt="Follow Us" title="Follow Us" class="twitter"></a></li>
-				<li><a href="#"><img src="../fonts/icomoon/SVG/pinterest.svg" alt="View our Pins" title="View our Pins" class="pinterest"></a></li>
+				<li><a href="#"><img src="/fonts/icomoon/SVG/facebook.svg" alt="Visit our Facebook Page" title="Visit our Facebook Page" class="facebook"></a></li>
+				<li><a href="#"><img src="/fonts/icomoon/SVG/twitter.svg" alt="Follow Us" title="Follow Us" class="twitter"></a></li>
+				<li><a href="#"><img src="/fonts/icomoon/SVG/pinterest.svg" alt="View our Pins" title="View our Pins" class="pinterest"></a></li>
 			</ul>
 			<div class="ftrLogo">
 				<div class="smlLogo"></div>
